# vim

./: CMakeLists.txt
src/: blob.c  buffer.c  change.c  charset.c  cindent.c  cmdexpand.c  cmdhist.c  debugger.c  diff.c  drawline.c  edit.c  eval.c  evalfunc.c  evalvars.c  ex_cmds.c  ex_docmd.c  ex_eval.c  ex_getln.c  float.c  fold.c  gui_gtk_x11.c  if_xcmdsrv.c  indent.c  json.c  main.c  misc2.c  normal.c  ops.c  optionstr.c  os_mswin.c  pathdef.c  regexp.c  regexp_bt.c  regexp_nfa.c  session.c  spellfile.c  strings.c  typval.c  usercmd.c  vim9cmds.c  (+1 more)
