cmake_minimum_required(VERSION 3.20)

project(vim)

add_executable(vim
	src/main.c
	src/alloc.c
	src/arabic.c
	src/arglist.c
	src/autocmd.c
	src/beval.c
	src/blob.c
	src/blowfish.c
	src/buffer.c
	src/bufwrite.c
	src/change.c
	src/charset.c
	src/cindent.c
	src/clientserver.c
	src/clipboard.c
	src/cmdexpand.c
	src/cmdhist.c
	src/crypt.c
	src/crypt_zip.c
	src/debugger.c
	src/dict.c
	src/diff.c
	src/digraph.c
	src/drawline.c
	src/drawscreen.c
	src/edit.c
	src/eval.c
	src/evalbuffer.c
	src/evalfunc.c
	src/evalvars.c
	src/evalwindow.c
	src/ex_cmds.c
	src/ex_cmds2.c
	src/ex_docmd.c
	src/ex_eval.c
	src/ex_getln.c
	src/fileio.c
	src/filepath.c
	src/findfile.c
	src/float.c
	src/fold.c
	src/getchar.c
	src/gui_xim.c
	src/hardcopy.c
	src/hashtab.c
	src/help.c
	src/highlight.c
	src/if_cscope.c
	src/indent.c
	src/insexpand.c
	src/json.c
	src/list.c
	src/locale.c
	src/logfile.c
	src/main.c
	src/map.c
	src/mark.c
	src/match.c
	src/mbyte.c
	src/memfile.c
	src/memline.c
	src/menu.c
	src/message.c
	src/misc1.c
	src/misc2.c
	src/mouse.c
	src/move.c
	src/normal.c
	src/ops.c
	src/option.c
	src/optionstr.c
	src/os_mswin.c
	src/os_win32.c
	src/pathdef.c
	src/popupmenu.c
	src/popupwin.c
	src/profiler.c
	src/quickfix.c
	src/regexp.c
	src/register.c
	src/scriptfile.c
	src/screen.c
	src/search.c
	src/session.c
	src/sha256.c
	src/sign.c
	src/spell.c
	src/spellfile.c
	src/spellsuggest.c
	src/strings.c
	src/syntax.c
	src/tag.c
	src/term.c
	src/testing.c
	src/textformat.c
	src/textobject.c
	src/textprop.c
	src/time.c
	src/typval.c
	src/ui.c
	src/undo.c
	src/usercmd.c
	src/userfunc.c
	src/vim9class.c
	src/vim9cmds.c
	src/vim9compile.c
	src/vim9execute.c
	src/vim9expr.c
	src/vim9script.c
	src/vim9instr.c
	src/vim9type.c
	src/viminfo.c
	src/winclip.c
	src/window.c

	src/xdiff/xdiffi.c
	src/xdiff/xemit.c
	src/xdiff/xprepare.c
	src/xdiff/xutils.c
	src/xdiff/xhistogram.c
	src/xdiff/xpatience.c

	src/version.c

	src/os_w32exe.c

	src/iscygpty.c
)

target_include_directories(vim PUBLIC src src/proto)
target_link_libraries(vim PUBLIC netapi32)

install(TARGETS vim DESTINATION $ENV{USERPROFILE}/bin)
